<resources>
    <string name="app_name">PhoneBook</string>
    <string name="benvenuto">Benvenuto</string>
    <string name="accedi">Accedi</string>
    <string name="textview">TextView</string>
    <string name="password">Password</string>
    <string name="registrati_qui">Registrati Qui</string>
    <string name="cognome">Cognome</string>
    <string name="seleziona">Seleziona</string>
    <string name="benvenuto_in_phonebook">Benvenuto in Phonebook</string>
    <string name="username">Username</string>
    <string name="aggiorna_selezionato">Aggiorna selezionato</string>
    <string name="ellimina_selezionato">Ellimina selezionato</string>
    <string name="registrati_ora">Registrati Ora</string>
    <string name="telefono">Telefono</string>
    <string name="et">Età</string>
    <string name="inserisci">Inserisci</string>
    <string name="nome">Nome</string>
    <string name="indirizzo">Indirizzo</string>
    <string name="logo">logo</string>
    <string name="logo2">Logo</string>
    <string name="prenume">Prenume</string>
    <string name="seleziona_per_modificare_elliminare_o_chiamare">Seleziona per modificare, elliminare o chiamare</string>
    <string name="Inserisci_Nuovo_Contatto">Inserisci nuovo contatto</string>
    <string name="ellimina">Ellimina</string>
    <string name="chiama_modifica_o_rimuovi_contatto">Chiama, modifica o rimuovi contatto</string>
    <string name="modifica">Modifica</string>
    <string name="chiama">Chiama</string>
</resources>
