<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/et_cog"
        android:layout_width="85dp"
        android:layout_height="47dp"

        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/et_tel"
        android:layout_marginStart="127dp"
        android:fontFamily="@font/allura"
        android:text="@string/cognome"
        android:textAlignment="center"
        android:textColor="@color/danger"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/et_nome"
        android:layout_width="80dp"
        android:layout_height="44dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/et_cog"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/allura"
        android:text="@string/telefono"
        android:textAlignment="center"
        android:textColor="@color/danger"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/et_tel"
        android:layout_width="112dp"
        android:layout_height="89dp"

        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/et_nome"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/allura"
        android:text="@string/nome"
        android:textAlignment="center"
        android:textColor="@color/danger"
        android:textSize="16sp"
        android:textStyle="bold" />
</RelativeLayout>
